src/test/ui/augmented-assignments.stderr
error[E0505]: cannot move out of `x` because it is borrowed
  --> $DIR/augmented-assignments.rs:16:5
   |
LL |     x
   |     - borrow of `x` occurs here
...
LL |     x;
   |     ^ move out of `x` occurs here

error[E0596]: cannot borrow `y` as mutable, as it is not declared as mutable
  --> $DIR/augmented-assignments.rs:23:5
   |
LL |     let y = Int(2);
   |         - help: consider changing this to be mutable: `mut y`
...
LL |     y
   |     ^ cannot borrow as mutable

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0505, E0596.
For more information about an error, try `rustc --explain E0505`.
